Advance in K8s/Caching on Kubernetes with Nginx-Ingress/Application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  namespace: default
spec:
  selector:
    app: web-ui
  type: ClusterIP
  ports:
  - name: web-ui
    protocol: TCP
    port: 80
    targetPort: 80
