Advance in K8s/Caching on Kubernetes with Nginx-Ingress/Application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ui-ing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: denizturkmen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui
            port:
              number: 80
